fix: humming dark mode

--- a/client/src/theme/variables.css
+++ b/client/src/theme/variables.css
@@ -5,6 +5,7 @@ http://ionicframework.com/docs/theming/ */
 :root {
     /* App color */
     --body-bg-color: #fff;
+    --body-bg-color-rgb: 255, 255, 255;
 
     --admin-bg-color: #f0f0f5;
     --admin-nav-color: lavender;
@@ -65,6 +66,7 @@ http://ionicframework.com/docs/theming/ */
 body.dark {
     /* App color */
     --body-bg-color: #171717;
+    --body-bg-color-rgb: 23, 23, 23;
 
     --admin-bg-color: #171717;
     --admin-nav-color: #242526;
